fixed word wrapping of header in narrow browsers

--- a/content/style/main.css
+++ b/content/style/main.css
@@ -19,9 +19,12 @@ a:hover {
 div#main {
 	color: black;
 	font-family: helvetica, sans;
+}
+
+div.narrow {
+	width: 30%;
 	margin-left: auto;
 	margin-right: auto;
-	width: 30%;
 }
 
 div#page-header {
